--- a/api/package.json
+++ b/api/package.json
@@ -13,14 +13,23 @@
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "seed": "node ./scripts/seedDb.js",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22"
+    "jest": "^29.7.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.3",
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=10.16.3"
+  },
+  "jest": {
+    "testTimeout": 10000
   },
   "engineStrict": true
 }
